--- a/mastermind-persistence/build.gradle
+++ b/mastermind-persistence/build.gradle
@@ -12,7 +12,6 @@ repositories {
 }
 
 dependencies {
-
-
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
