--- a/mastermind-business/build.gradle
+++ b/mastermind-business/build.gradle
@@ -16,5 +16,5 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: "2.7.0"
     compile("io.springfox:springfox-swagger2:2.7.0")
     compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 }
